deployments/pathweb/workloads/home-network/paperless-ngx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: home-network
  labels:
    app.kubernetes.io/name: paperless-ngx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx
        preset-egress-policy: internet-only
    spec:
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      automountServiceAccountToken: false
      containers:
      - name: gotenberg
        image: docker.io/gotenberg/gotenberg:8.37
        command:
        - "gotenberg"
        - "--chromium-disable-javascript=true"
        - "--chromium-allow-list=file:///tmp/.*"
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: tika
        image: docker.io/apache/tika:latest
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /tika
            port: 9998
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /tika
            port: 9998
          initialDelaySeconds: 10
          periodSeconds: 10
      - name: webserver
        image: ghcr.io/paperless-ngx/paperless-ngx:latest
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/src/paperless/data
          name: data
          subPath: data
        - mountPath: /usr/src/paperless/media
          name: data
          subPath: media
        - mountPath: /tmp/paperless
          name: tmpdir
        # - mountPath: /usr/src/paperless/export
        #   name: data
        #   subPath: export
        # - mountPath: /usr/src/paperless/consume
        #   name: data
        #   subPath: consume
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: '4'
            memory: 4Gi
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-ngx-data
      - name: tmpdir
        emptyDir: {}
