deployments/pathweb/workloads/home-network/paperless-ngx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: home-network
  labels:
    app.kubernetes.io/name: paperless-ngx
spec:
  selector:
    app.kubernetes.io/name: paperless-ngx
  ports:
  - port: 8000
    targetPort: http
    name: http
