deployments/pathweb/workloads/home-network/paperless-ngx/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-ngx-network-policy
  namespace: home-network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      rules:
        http: [{}]
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: n8n
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      rules:
        http: [{}]
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
      matchExpressions:
      - key: "k8s:k8s-app"
        operator: In
        values:
        - kube-dns
        - node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: rfhome-postgres-ha
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
  - toEntities:
    - ingress
